create med entry
