# docs/swagger.yaml
@@ -30,6 +30,27 @@ definitions:
       message:
         type: string
     type: object
+  models.MedicalEntry:
+    properties:
+      description:
+        type: string
+      device_number:
+        type: integer
+      disease:
+        type: string
+      entry_date:
+        type: string
+      id:
+        type: integer
+      medical_record_id:
+        type: integer
+      recommendation:
+        type: string
+      vaccinations:
+        type: string
+      vet_id:
+        type: integer
+    type: object
   models.OutputPetDTO:
     properties:
       owner_id:
@@ -237,6 +258,38 @@ paths:
       summary: Update Pet
       tags:
       - pets
+  /info/v1/record/entries:
+    post:
+      consumes:
+      - application/json
+      description: Creates a new med entry
+      parameters:
+      - description: entry data
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/models.MedicalEntry'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Successfully created утекн
+          schema:
+            type: number
+        "400":
+          description: Invalid input body
+          schema:
+            $ref: '#/definitions/models.ErrorDTO'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/models.ErrorDTO'
+      security:
+      - ApiKeyAuth: []
+      summary: Create med entry
+      tags:
+      - MedEntry
 securityDefinitions:
   ApiKeyAuth:
     in: header
